Chrome OS: Fix crash with auto connect notifier.

Also add checks to StubNotificationDisplayService test util class to
catch this in the future (checks match NotificationDisplayServiceImpl
production code).

Bug: 843692
Change-Id: Iebb64687dadf6eb50bffea80e946e8dd3336bac9
Reviewed-on: https://chromium-review.googlesource.com/1062653
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559307}
Former-commit-id: e03299eab652bf51b73541f8bd52178c913f6439